# skills

./: .gitignore  SKILLS_DESIGN.md  TEMPLATE.md  auctoritas.md  censura.md  cohors.md  copia.md  gubernatio.md  job-search-state.schema.md  regulatio.md  relatio.md  sapor.md
.claude/: ralph-loop.local.md
acta/: SKILL.md
adversaria/: SKILL.md
adytum/: SKILL.md
agent-cli/: SKILL.md
agent-sync/: SKILL.md
agoge/: SKILL.md
agoras/: SKILL.md
ai-news/: SKILL.md  ai-digest.py  ai-news  ai-news-daily.py  sources.yaml
ai-review/: SKILL.md
akron/: SKILL.md
amicus/: SKILL.md
analyze/: SKILL.md
analyze-link/: SKILL.md
anam/: SKILL.md
annotation/: SKILL.md
announce/: SKILL.md
aporia/: SKILL.md
archon/: SKILL.md
arousal/: SKILL.md
artifex/: SKILL.md
ask-llms/: SKILL.md  ask-llms
askesis/: SKILL.md
auceps/: SKILL.md
audit/: SKILL.md
auspex/: SKILL.md
bouleusis/: SKILL.md
brainstorm/: SKILL.md
browser/: SKILL.md
browser-automation/: SKILL.md
browser-login/: SKILL.md
budding/: SKILL.md
caelum/: SKILL.md
capco-cv/: SKILL.md
capco-drill/: skill.md
capco-prep/: skill.md
cardo/: SKILL.md
career-coach/: SKILL.md
certus/: SKILL.md
challenge-idea/: SKILL.md
check-channels/: SKILL.md
check-exercise-readiness/: SKILL.md
chemoreception/: SKILL.md
chemotaxis/: SKILL.md
choregos/: SKILL.md
chrome-automation/: SKILL.md  chrome-automation
cibus/: PLAN.md  SKILL.md
claude-code/: SKILL.md
claude-code-system/: SKILL.md
codebase-cleanup/: SKILL.md  codebase-cleanup
codex-delegate/: SKILL.md
comes/: SKILL.md
commute/: SKILL.md
conclusio/: SKILL.md
consilium/: REFERENCE.md  SKILL.md
consilium-work-20260301/: Cargo.toml  llms.txt
consulting-prep/: SKILL.md
contact-prep/: SKILL.md
content-fetch/: SKILL.md  content-fetch
copia/: SKILL.md
cora-email/: SKILL.md
counter-intel/: SKILL.md  counter-intel
crm/: SKILL.md
cron/: SKILL.md
cursus/: SKILL.md
custodia/: SKILL.md
cytokinesis/: SKILL.md
cytometry/: SKILL.md
daily/: SKILL.md  daily
debrief/: SKILL.md  debrief
decide/: SKILL.md
dedao-dl/: SKILL.md  dedao-dl
defuddle/: SKILL.md
delegate/: SKILL.md
delegation-reference/: SKILL.md
deltos/: SKILL.md
design-agentic-system/: SKILL.md
design-skill/: SKILL.md  design-skill
dev/: SKILL.md
dev-workflow-reference/: SKILL.md
diagnosis/: SKILL.md
dialexis/: SKILL.md
digest/: SKILL.md  digest.py  sources.yaml
docima/: SKILL.md
dokimasia/: SKILL.md
ductus/: SKILL.md
due/: SKILL.md
elencho/: SKILL.md
endocytosis/: SKILL.md
enkrateia/: SKILL.md
entrainment/: SKILL.md
eow/: SKILL.md
epistula/: SKILL.md
eruo/: SKILL.md
eudaimonia/: SKILL.md
evaluate-ai-repo/: SKILL.md
evaluate-article/: SKILL.md  evaluate-article
evaluate-job/: SKILL.md  evaluate-job
evolvo/: SKILL.md
examen/: SKILL.md
exauro/: SKILL.md
existence/: SKILL.md
exocytosis/: SKILL.md
expedio/: SKILL.md
expression/: SKILL.md
faber/: SKILL.md
fasti/: SKILL.md
file-upload/: SKILL.md  file-upload
fingo/: SKILL.md
llm-council/: .gitignore  README.md  SKILL.md  council.py  council_history.jsonl  pyproject.toml
llm-council/frontier_council/: __init__.py  cli.py
llm-council/llm_council/: __init__.py  cli.py  council.py
llm-council/plans/: feat-true-council-deliberation.md
(+450 files in other folders)
