[package]
name = "consilium"
version = "0.2.0"
edition = "2021"
description = "Multi-model deliberation CLI — 5 frontier LLMs debate, then Claude judges"
license = "MIT"
repository = "https://github.com/terry-li-hm/consilium"
homepage = "https://consilium.sh"
keywords = ["llm", "deliberation", "cli", "ai", "multi-model"]
categories = ["command-line-utilities"]

[[bin]]
name = "consilium"
path = "src/main.rs"

[[bin]]
name = "consi"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
futures-util = "0.3"
rand = "0.8"
ratatui = "0.29"
regex = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
