[project]
name = "frontier-council"
version = "0.1.0"
description = "Multi-model deliberation for important decisions. 5 frontier LLMs debate, then a judge synthesizes consensus."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Terry Li", email = "terry.li.hm@gmail.com" }
]
keywords = ["llm", "ai", "deliberation", "multi-model", "council", "openrouter", "frontier", "debate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
frontier-council = "frontier_council.cli:main"

[project.urls]
Homepage = "https://github.com/terry-li-hm/skills"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frontier_council"]
